--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "concurrently \"npm --prefix CPE-PRAC-DES-BE run server\" \"npm --prefix CPE-PRAC-DES-FE run dev\" \"npm --prefix CPE-PRAC-DES-WSS run server\""
+    "start": "concurrently \"npm --prefix CPE-PRAC-DES-BE run server\" \"npm --prefix CPE-PRAC-DES-FE run dev\" \"npm --prefix CPE-PRAC-DES-WSS run server\" \"npm --prefix CPE-PRAC-DES-ML run server\""
   },
   "dependencies": {
     "concurrently": "^9.1.2",
